--- a/thailand_website/CSS/style.css
+++ b/thailand_website/CSS/style.css
@@ -105,13 +105,12 @@ p {
 }
 
 .navbar ul {
+    display: flex;
     list-style: none;
     padding: 0;
     margin: 0;
-    display: flex;
     justify-content: center;
     align-items: center;
-
 }
 
 .navbar li {
@@ -159,7 +158,7 @@ p {
 
 .nav-links {
     display: none;
-    flex-direction: column;
+    flex-direction: row;
     background-color: var(--footer-bg);
     position: absolute;
     top: 100%;
@@ -168,6 +167,8 @@ p {
     text-align: center;
     padding: 1rem 0;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+    border-top: 2px solid var(--footer-bg);
+    border-bottom: 2px solid var(--footer-bg);
 }
 
 .nav-links.show {
@@ -206,15 +207,15 @@ p {
     min-height: 100vh;
     padding: 2rem;
     box-sizing: border-box;
-    padding-top: 250px;
+    padding-top: 10%;
     text-align: center;
     background-image: url("../img/background.png");
     background-size: cover;
     background-position: center;
     background-position-y: 0;
+    background-position-x: 57%;
     background-repeat: no-repeat;
     position: relative;
-
 }
 
 .container::before {
@@ -226,6 +227,10 @@ p {
     bottom: 0;
     background-color: rgba(0, 0, 0, 0.6);
     z-index: 0;
+}
+
+.container-headings h1 {
+    margin-top: 0;
 }
 
 .container-headings h2 {
@@ -249,7 +254,7 @@ button {
     padding: clamp(8px, 2vw, 12px) clamp(16px, 4vw, 24px);
     background-color: rgba(14, 14, 14, 0.498);
     color: var(--secondary-color);
-    border: 3px solid rgba(32, 32, 32, 0.75);
+    border: 2px solid rgba(206, 206, 206, 0.75);
     border-radius: 6px;
     cursor: pointer;
     transition: background-color 0.3s ease, color 0.3s ease;
@@ -1088,6 +1093,22 @@ figcaption {
 
     .nav-links {
         display: none;
+    }
+
+    .navbar ul {
+        display: none;
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        justify-content: center;
+        align-items: center;
+    }
+
+
+
+    
+    .nav-links.show {
+        display: flex;
         flex-direction: column;
         background-color: var(--footer-bg);
         position: absolute;
@@ -1097,10 +1118,6 @@ figcaption {
         text-align: center;
         padding: 1rem 0;
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
-    }
-
-    .nav-links.show {
-        display: flex;
     }
 
     .nav-links li {
