--- a/thailand_website/CSS/style.css
+++ b/thailand_website/CSS/style.css
@@ -291,6 +291,8 @@ button:hover {
     border-radius: 8px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
     z-index: 1;
+    max-width: 450px;
+    position: relative;
 }
 
 .countdown-segment {
@@ -1255,4 +1257,8 @@ figcaption {
         display: flex;
     }
 
+    #countdown {
+        left: 33%;
+
+    }
 }
