--- a/thailand_website/CSS/style.css
+++ b/thailand_website/CSS/style.css
@@ -886,6 +886,8 @@ figcaption {
 #location-description {
     margin: 2rem 0;
     text-align: center;
+    max-width: 87vw;
+
 }
 
 #location-description h3 {
@@ -906,6 +908,8 @@ figcaption {
 
 #top-activities {
     margin: 2rem 0;
+    max-width: 87vw;
+
 }
 
 #top-activities h3 {
