--- a/thailand_website/CSS/style.css
+++ b/thailand_website/CSS/style.css
@@ -14,7 +14,21 @@
 
 
 * {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
+}
+
+html, body {
+    margin: 0;           /* Remove margins */
+    padding: 0;          /* Remove padding */
+    width: 100%;         /* Ensure full viewport width */
+    height: 100%;        /* Ensure full viewport height */
+    overflow-x: hidden;  /* Prevent horizontal scrolling */
+}
+
+body * {
+    max-width: 100%;
 }
 
 body {
@@ -52,7 +66,14 @@ h1, h2, h3 {
 }
 
 
-
+.weatherwidget-io {
+    position: relative;
+    width: 94%;
+    min-height: 216px;
+    border: 4px solid var(--footer-bg);
+    margin-bottom: 20px;
+    overflow: hidden;
+}
 
 .page {
     position: relative;
@@ -411,6 +432,8 @@ footer {
     padding: 0;
     display: flex;
     justify-content: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
     gap: 20px;
 
 }
